Going to try using Java 14 instance of for cleaner code